Fix the overflow bug on the dashboard page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,15 @@
 .w-48 {
   width: 48%;
 }
+
+@layer base {
+  html,body
+  {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+  }
+}
+
